kubernetes/lessons/cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-srv
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
